test/files/pos/sd465.scala
object Test {
  0: Byte
  0: Int

  (+0): Byte
  (+0): Int
}
