test/files/neg/t10729/ArrayAsAnnotation.scala
object ArrayAsAnnotation {
  1: @Array(10)
}